@@ -18,11 +18,24 @@ $td->runtest("PCRE",
 chop(my $supported = `pcre --unicode-classes-supported`);
 if ($supported =~ m/^1/)
 {
+    my $xflags = 0;
+    if (`pcre --unicode-classes | wc -l` == 1)
+    {
+	# On Red Hat Enterprise Linux 5, the version of pcre provided
+	# by default claims to support unicode character classes, but
+	# they don't actually work.  Since qpdf doesn't use this
+	# functionality, we won't care if this particular test case
+	# fails.  If someone were to make general use of this wrapper,
+	# this test should be re-enabled, but on the other hand, they
+	# could just use the C++ interface that's been added to pcre
+	# since this code was written.
+	$xflags |= $td->EXPECT_FAILURE;
+    }
     $td->runtest("unicode character classes",
 		 {$td->COMMAND => "pcre --unicode-classes"},
 		 {$td->FILE => "pcre-unicode-classes.out",
 		  $td->EXIT_STATUS => 0},
-		 $td->NORMALIZE_NEWLINES);
+		 $td->NORMALIZE_NEWLINES | $xflags);
 }
 else
 {
